# AnalayzerPro

./: .gitmodules  AGENTS.md  AnalyzerPro.code-workspace  CHANGES.md  CMakeLists.txt  CMakePresets.json  JUCE_SETUP.md  LAST_RESULT.md  ONE_PAGE_SOP.md  README.md  build.sh  melechdsp-hq.code-workspace
.cache/clangd/index/: ABStateManager.cpp.6BA77AB95F984074.idx  ABStateManager.h.FB623AB9A9093B99.idx  AnalyzerDisplayView.cpp.94F7AD23A8E892C1.idx  AnalyzerDisplayView.h.7183D3436A79BA57.idx  AnalyzerEngine.cpp.EA51589399F75DB5.idx  AnalyzerEngine.h.739A8411EE87702F.idx  AnalyzerGridPlaceholder.cpp.C2E56E92666CEAAE.idx  AnalyzerGridPlaceholder.h.30DEDA02B8F4D1A4.idx  AnalyzerProControlContext.cpp.8E7069F4FFCA1E18.idx  AnalyzerProControlContext.h.F1634AFB10EB0204.idx  AnalyzerProParamIdMap.cpp.F0F98FC1EA056FFA.idx  AnalyzerProParamIdMap.h.0762805D1550CD23.idx  AnalyzerSnapshot.h.8C1F27E138BC5FD8.idx  AreaFillRenderer.h.D3F8C638CCD41DCD.idx  AxisHoverController.cpp.71F566B01C66323D.idx  AxisHoverController.h.3DA0023620D63035.idx  AxisInteraction.cpp.291A44E6105D023D.idx  AxisInteraction.h.062BEC6E5BD99030.idx  AxisRenderer.cpp.995EEC36B38A42CA.idx  AxisRenderer.h.79F6A0909F35C461.idx  BarsRenderer.cpp.097245970D315B50.idx  BarsRenderer.h.00126BB31BDA773A.idx  BindingRegistry.h.8EB93005246AB79C.idx  ChoiceRow.cpp.12C861FA61195ECD.idx  ChoiceRow.cpp.7B3CDB4EEEA4036C.idx  ChoiceRow.h.3A75594DA0F9A270.idx  ChoiceRow.h.3EFF822426A91B7C.idx  ControlBinder.cpp.4F6550972B6BDF75.idx  ControlBinder.h.1A2F75208BA2F640.idx  ControlId.h.854B43815185B3A3.idx  ControlIds.h.E649042A682D1D42.idx  ControlRail.cpp.342CAC03D681AA74.idx  ControlRail.h.5C2654CB7C19EACA.idx  ControlSpecs.cpp.9EFCD7E0DFB77C68.idx  ControlSpecs.h.FC790BC022E64162.idx  CursorReadoutRenderer.cpp.32CB773FBB27C11D.idx  CursorReadoutRenderer.h.0E5A84ACD1F7F9A6.idx  DeviceRoutingHelper.cpp.8F7940748E4C59AA.idx  DeviceRoutingHelper.h.0ABD752E3AD08D08.idx  Focus.h.FF0BD7C30796D1F6.idx  (+103 more)
.cache/xcode-derived/: info.plist
.cache/xcode-derived/ModuleCache.noindex/: Session.modulevalidation
.continue/: config.json
PROMPTS/: 00_SYSTEM_RULES.txt  CODEX_SYSTEM_JUCE_CMAKE.txt  ENGINE_deferred_fft_resize.txt  README.txt  TEMPLATE_ENGINE_TASK.txt  TEMPLATE_REFACTOR_GUARD.txt  TEMPLATE_UI_CONTROLS_TASK.txt  UI_reset_peaks_button.txt  Untitled
PROMPTS/01_ENGINE/: 05_peak_decay_models_db_vs_tc.txt
PROMPTS/02_UI_ANALYZER/: 03_db_range_user_selectable.txt
PROMPTS/03_UI_CONTROLS/: 04_headerbar_layout_polish.txt
PROMPTS/99_ARCHIVE/: DONE_07_add_dummy_comment_pluginprocessor.txt
PROMPTS/CHECKLISTS/: PRE_COMMIT_UI_DESIGN_SYSTEM.md  PRE_COMMIT_UI_DESIGN_SYSTEM_COMPLIANCE.md
PROMPTS/INDEX/: PROMPTS_INDEX.md
PROMPTS/MISSIONS/: ARCHITECTURE_ANALYSIS.md  CURRENT_MISSION.txt  CURRENT_MISSION_1.txt  DUAL_FFT_IMPLEMENTATION_PLAN.md  IMPLEMENTER_RESULT.md  LAST_RESULT.md  PHASE1_COMPLETE.md  PHASE2_STATUS_BLOCKER.md  PHASE2_STEP1_REPORT.md  PHASE2_STEP2.1_REPORT.md  PHASE2_STEP3.1_REPORT.md  PHASE3_ANALYSIS.md  PHASE3_STEP3.1_REPORT.md  REVISED_DUAL_FFT_PLAN.md  STEP1_BINDINGS_REPORT.md  STEP1_SPECTRUM_REPORT.md  STEP2_PLAN.md  STEP5_PARTIAL_REPORT.md  STEP5_REPORT.md  VERIFIER.txt  VERIFIER_RESULT.md  VERIFIER_RESULT_PHASE1.md
PROMPTS/MISSIONS/03_UI_CONTROLS/: 01_headerbar_reset_peaks_button.txt  UI_db_range_selector.txt
PROMPTS/RUNBOOKS/: ADD_STEREO_SCOPE_V1.txt  ANALYZERPRO_UI_V1.txt  CONTROL_PRIMITIVES_ANALYSIS.md  CONTROL_PRIMITIVES_EXTRACTION_V1.txt  FFT_NO_DATA_GUARD_V1.txt  FFT_TRACE_STYLE_UNIFY_V1.txt  FFT_TRACE_TOGGLE_ATOMIC_REBUILD_V1.txt  FFT_WEIGHTING_ARTIFACT_GUARD_V1.txt  FIGMA_TOKEN_IMPORT_STATUS.md  FIGMA_TOKEN_IMPORT_V1.txt  HOVER_TOOLTIP_SYSTEM_V1.txt  INCLUDE_PATH_FIX.md  METER_MODE_LINK_RMS_PEAK_V1.txt  MULTI_AGENT_EXECUTION_V1.txt  MULTI_TRACE_DATA_PIPELINE_FIX_V2_IMPLEMENTER.txt  PLUGIN_UI_TEMPLATE_V1  PLUGIN_UI_TEMPLATE_V1_REFERENCE.md  PRESETS_AB_BYPASS_V1.txt  RUNBOOK_INDEX.txt  SMOOTHING_RENDERING_STABILITY_V2.txt  UI_METER_ANALYZER_FFT_FIXES_V1.txt
PROMPTS/TEMPLATES/: MASTER_CURSOR_PROMPT.txt.  TEMPLATE_MULTI_STEP_FEATURE.txt  TEMPLATE_REFACTOR_GUARD.txt  TEMPLATE_UI_CONTROLS_TASK.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/analyzer/: AnalyzerEngine.cpp  AnalyzerEngine.h  AnalyzerSnapshot.h  StereoScopeAnalyzer.cpp  StereoScopeAnalyzer.h
Source/audio/: DeviceRoutingHelper.cpp  DeviceRoutingHelper.h
Source/config/: DevFlags.h
Source/control/: AnalyzerProControlContext.cpp  AnalyzerProControlContext.h  AnalyzerProParamIdMap.cpp  AnalyzerProParamIdMap.h  ControlBinder.cpp  ControlBinder.h  ControlIds.h  ControlSpecs.cpp  ControlSpecs.h
Source/dsp/loudness/: LoudnessAnalyzer.cpp  LoudnessAnalyzer.h
Source/hardware/: HardwareMeterMapper.cpp  HardwareMeterMapper.h  IHardwareMeterSink.h  SoftwareMeterSink.cpp  SoftwareMeterSink.h
Source/parameters/: Parameters.h
Source/presets/: ABStateManager.cpp  ABStateManager.h  PresetManager.cpp  PresetManager.h
Source/state/: PresetManager.cpp  PresetManager.h  StateManager.cpp  StateManager.h
Source/ui/: MainView.cpp  MainView.h
Source/ui/analyzer/: AnalyzerDisplayView.cpp  AnalyzerDisplayView.h  StereoScopeView.cpp  StereoScopeView.h
Source/ui/layout/: ControlRail.cpp  ControlRail.h  FooterBar.cpp  FooterBar.h  HeaderBar.cpp  HeaderBar.h
Source/ui/loudness/: LoudnessNumericPanel.cpp  LoudnessNumericPanel.h
Source/ui/meters/: MeterComponent.cpp  MeterComponent.h  MeterGroupComponent.cpp  MeterGroupComponent.h
Source/ui/tooltips/: TooltipData.h  TooltipManager.cpp  TooltipManager.h  TooltipOverlayComponent.cpp  TooltipOverlayComponent.h
docs/: AI_GOVERNANCE.md   AI_WORKFLOW_DIAGRAM.md  BUILD_VERIFY.md  CONTRIBUTING.md  CONTROL_IDS.md  DIAGNOSTICS_INVARIANTS.md  HANDOFF_PACKAGE.txt  HANDOFF_TEMPLATE.md  NEW_PLUGIN_CHECKLIST.md  ONE_PAGE_SOP.md  PROJECT_TREE.md  RENDER_AUDITS.md  SPEC.md  UI_Gemini_Ideas.md
docs/docs/: HANDOFF_PACKAGE_NEXT.txt
scripts/: build.sh  check-no-manual-axes.sh  check-no-warnings.sh  new_plugin.sh  run_standalone.sh
ui_core/: CMakeLists.txt  UiCore.cpp  UiCore.h
(+2218 files in other folders)
